User/Session Related Updates

--- a/Acebook/Views/Home/Index.cshtml
+++ b/Acebook/Views/Home/Index.cshtml
@@ -2,8 +2,15 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 id="greeting" class="display-4">Welcome To Acebook</h1>
-    <a href="/signup" id="signup">Sign Up</a>
-    <a href="/signin" id="signin">Sign In</a>
+
+<div class="home">
+    <div class="home-container">
+        <div class="home-box">
+            <h1 id="greeting">Welcome To Acebook</h1>
+            <div class="home-buttons">
+                <a href="/signup" id="signup">Sign Up</a>
+                <a href="/signin" id="signin">Sign In</a>
+            </div>
+        </div>
+    </div>
 </div>
