--- a/Acebook/Views/Posts/Index.cshtml
+++ b/Acebook/Views/Posts/Index.cshtml
@@ -17,7 +17,7 @@
 
   <!-- Submit button -->
   <p>
-    <input type="submit" value="Submit" />
+    <input type="submit" id="submit" value="Submit" />
   </p>
 </form>
 
