--- a/Acebook/Views/Posts/Index.cshtml
+++ b/Acebook/Views/Posts/Index.cshtml
@@ -35,7 +35,7 @@
             <input type="text" id="PostImageUrl" name="PostImageUrl" placeholder="Enter image URL" class="image-input" />
             <span>or</span>
             <input type="file" id="PostImageFile" name="PostImageFile" class="file-input" />
-            <button type="submit" class="post-btn">Post</button>
+            <button type="submit" id="submit" class="post-btn">Post</button>
         </div>
     </form>
 </div>
