adding some css styling

--- a/Acebook/Views/Shared/_Layout.cshtml
+++ b/Acebook/Views/Shared/_Layout.cshtml
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="~/css/changepassword.css" />
     <link rel="stylesheet" href="~/css/profile.css" />
     <link rel="stylesheet" href="~/css/posts.css" />
+    <link rel="stylesheet" href="~/css/friendships.css" />
+
 </head>
 <body>
     <header>
