--- a/Acebook/Views/Friendships/SendFriendRequest.cshtml
+++ b/Acebook/Views/Friendships/SendFriendRequest.cshtml
@@ -1,4 +1,5 @@
-<form action="/Friendships/RequestSent" method="post">
+
+<form action="@Url.Action("SendFriendRequest", "Friendships")" method="post">
     <label for="receiverId">Enter Receiver's User ID:</label>
     <input type="number" id="receiverId" name="receiverId" required />
     <button class="friend-request-button" type="submit">Send Friend Request</button>
