Profile Page update and when clicked each post opens in a new page

--- a/Acebook/Views/Posts/Index.cshtml
+++ b/Acebook/Views/Posts/Index.cshtml
@@ -44,7 +44,7 @@
 </div>
 
 @{
-    Layout = "~/Views/Shared/_Layout.cshtml"; // If you're using a shared layout
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <style>
@@ -78,10 +78,10 @@
 
             <div class="reactions">
                 <div class="like-count">
-                    <span>👍 0</span> 
+                    <span>0</span> 
                 </div>
                 <div class="comment-count">
-                    <span>💬 0</span> 
+                    <span>0</span> 
                 </div>
             </div>
         </div>
